--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/jest": "^27.0.3",
     "@types/morgan": "^1.9.3",
     "apicache": "^1.6.3",
+    "bcrypt": "^5.1.1",
     "dotenv": "^14.3.2",
     "express": "^4.17.1",
     "express-http-context": "^1.2.4",
