--- a/package.json
+++ b/package.json
@@ -33,12 +33,14 @@
     "fs": "^0.0.1-security",
     "http-status": "^1.5.0",
     "joi": "^17.5.0",
+    "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "mongoose": "^8.3.1",
     "morgan": "^1.10.0",
     "node-mocks-http": "^1.11.0",
     "normalize-package-data": "^6.0.0",
     "path": "^0.12.7",
+    "randomstring": "^1.3.0",
     "runtime-node-refresh": "^1.0.6",
     "supertest": "^6.1.6",
     "swagger-ui-express": "^4.3.0",
