helmet and compression middlewares added to which will improve security as well as enable compression of resonses

--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
     "@types/morgan": "^1.9.3",
     "apicache": "^1.6.3",
     "bcrypt": "^5.1.1",
+    "compression": "^1.7.4",
     "dotenv": "^14.3.2",
     "express": "^4.17.1",
     "express-http-context": "^1.2.4",
     "fs": "^0.0.1-security",
+    "helmet": "^7.1.0",
     "http-status": "^1.5.0",
     "joi": "^17.5.0",
     "jsonwebtoken": "^9.0.2",
