--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "mongoose": "^8.3.1",
     "morgan": "^1.10.0",
     "node-mocks-http": "^1.11.0",
+    "nodemailer": "^6.9.13",
     "normalize-package-data": "^6.0.0",
     "path": "^0.12.7",
     "randomstring": "^1.3.0",
