local env.local updated

--- a/.env.local
+++ b/.env.local
@@ -3,3 +3,8 @@ PORT=8080
 API_KEY_TOKEN=token
 MONGODB_URL=DB_URL_HERE
 MONGODB_DB_NAME=vigor
+JWT_SECRET_KEY=secret
+REFRESH_TOKEN_SECRET_KEY=refresh
+GMAIL_APP_PASSWORD=APP_PASSWORD_FROM_GOOLE
+GMAIL=gmail_used_to_send_email
+HOST_URL=http://localhost:8080
